PTNFLY-1169 New PatternFly.org Pattern Page Update Modified page title and tab to be on same line per new wireframes -- tab shown on own line for small screens. Renamed tab from "reference implementation" to "HTML/CSS". Removed max height style for prettyprint area in order to omit scrolling. Added collapsable toggle around prettyprint -- shown expanded by default. Added responsive CSS for large screens with design tab to address spacing issues between graphic and text. Added index at the top of the page so user can jump to various sections. Fixed anchors to use id instead of name attributes

--- a/source/_less/patternfly-site.less
+++ b/source/_less/patternfly-site.less
@@ -20,7 +20,7 @@ body {
   position: absolute;
   right: (@grid-gutter-width / 2);
   + .prettyprint {
-    max-height: 400px;
+    /* max-height: 400px; */
   }
 }
 
@@ -89,9 +89,10 @@ body {
   font-size: @font-size-base;
   .example-pf-demo {
     border: 1px solid @pre-border-color;
-    border-bottom: 0;
+    /* border-bottom: 0; */
     border-radius: @border-radius-base;
     padding: (@grid-gutter-width / 2);
+    margin-bottom: 10px;
   }
   .example-pf-demo-no-padding {
     padding: 0;
@@ -1008,4 +1009,21 @@ th {
 
 .wow {
   visibility: hidden;
+}
+
+.page-tabs-header {
+  @media (min-width: @screen-md) {
+    vertical-align: middle;
+    .cols-nopad-left {
+      padding-left: 0;
+    }
+    .cols-nopad-right {
+      padding-right: 0;
+    }
+    h1 {
+      border-bottom: 1px solid #D5D5D5;
+      line-height: 54px;
+      margin-top: 0px;
+    }
+  }
 }
